# gpt_cpp

./: CMakeLists.txt  README.md
include/core/: config.h  layers.h  model.h  ops.h  tensor.h
include/inference/: engine.h
include/training/: dataset.h  optimizer.h  trainer.h
include/utils/: checkpoint.h  logger.h  timer.h
scripts/: build.sh  prepare_data.py
src/core/: attention.cpp  layers.cpp  model.cpp
tests/: test_inference.cpp  test_layers.cpp  test_optimizer.cpp  test_tensor.cpp  test_tokenizer.cpp
tools/: benchmark.cpp  inference_main.cpp  train_main.cpp
